src/test/ui/span/borrowck-fn-in-const-b.stderr
error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrowck-fn-in-const-b.rs:7:9
   |
LL |     fn broken(x: &Vec<String>) {
   |                  ------------ help: consider changing this to be a mutable reference: `&mut Vec<String>`
LL |         x.push(format!("this is broken"));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
